inferencegraph-ensemble/k8s/ingress/housing-price-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: housing-price-graph-ingress
  namespace: kserve-graph-demo
spec:
  ingressClassName: nginx
  rules:
  - host: housing-price-graph.127.0.0.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: housing-price-graph
            port:
              number: 80
